@@ -134,6 +134,7 @@ enum fn_actor_type_e {
   FN_ACTOR_DOOR_GREEN,
   FN_ACTOR_SHOOTABLE_WALL,
   FN_ACTOR_LIFT,
+  FN_ACTOR_ACME,
   FN_ACTOR_MILL,                     /* TODO */
   FN_ACTOR_ACCESS_CARD_DOOR,
   FN_ACTOR_SPIKES_UP,
